# VoltaFramework

./: .gitignore  CMakeLists.txt
assets/: glow_fragment.glsl  glow_vertex.glsl
include/: CMakeLists.txt
include/FreeImage/: Makefile.mingw
include/glfw-3.4/: CMakeCache.txt  CMakeLists.txt  cmake_uninstall.cmake
include/glfw-3.4/docs/: Doxyfile
include/lua-5.4.7/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  lua.vcxproj  lua.vcxproj.filters  lua_shared.vcxproj  lua_static.vcxproj  lua_static.vcxproj.filters  luac.vcxproj  luac.vcxproj.filters
include/lua-5.4.7/src/: lobject.h  ltable.c  ltable.h  ltablib.c  luaconf.h
include/sqlite/: lemon.ilk  mkkeywordhash.ilk  mksourceid.ilk  sqlite3.exp  sqlite3.lib  sqlite3res.lo  src-verify.ilk
include/voltanet-1.0.0/: CMakeLists.txt  VoltaNet.cpp  VoltaNet.hpp
scripts/: Game.hpp  main.cpp  main.lua
src/: Audio.cpp  Audio.hpp  Buffer.cpp  Buffer.hpp  Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Color.cpp  Color.hpp  Event.cpp  Filesystem.cpp  Graphics.cpp  Input.cpp  Json.cpp  Json.hpp  LuaAPI.cpp  Maps.hpp  MathUtils.cpp  Matrix.cpp  Matrix.hpp  ParticleEmitter.cpp  Sqlite.cpp  TableUtils.cpp  Tweens.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  VoltaFramework.cpp  VoltaFramework.hpp  Window.cpp  main.cpp
